@@ -1,3 +1,7 @@
+2023-10-28	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	Perfect 'check_have_visibility()'.
+
 2023-10-05	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Fix a bug in NLS Util.
